--- a/css/stylenew.css
+++ b/css/stylenew.css
@@ -45,7 +45,7 @@ opacity: 1;
 
 }
 
-  
+
 
 ul, li, a {
   text-align: left;
@@ -53,12 +53,19 @@ font: normal normal normal 14px/18px Montserrat;
 letter-spacing: 0px;
 color: #4E6E7E;
 opacity: 1;
+
 }
 /* nav end*/
 
 
+.pad-box{
+  padding: 0%;
+  padding-right: 10px;
+}
 
-
+.butnav{
+  padding-top: 10px;
+}
 
 #subbutton {
   padding: 10px 24px;
@@ -168,11 +175,12 @@ li {
   letter-spacing: 0px;
   color: #b3c1c8;
   opacity: 1;
+  width: 150px;
 }
 
 #bottom-p {
   text-align: left;
-  font: normal normal normal 12px/15px Montserrat;
+  font: normal normal normal 10px/15px Montserrat;
   letter-spacing: 0px;
   color: #b3c1c8;
   opacity: 1;
@@ -686,6 +694,28 @@ opacity: 1;
   background-color: #f8fbfc;
 }
 
+.fname{
+  width: 100%;
+  height: 40px;
+  background: #FFFFFF 0% 0% no-repeat padding-box;
+border: 1.5px solid #E9ECEF;
+border-radius: 4px;
+opacity: 1;
+padding: 7px 10px 7px 10px;
+outline:none;
+text-align: left;
+font: normal normal normal 12px/15px Montserrat;
+letter-spacing: 0px;
+color: #B3C1C8;
+opacity: 1;
+}
+.fname:hover{
+  
+  border-color: #219EBC;
+  background-color: #f8fbfc;
+}
+
+
 #city:hover{
   
   border-color: #219EBC;
@@ -713,3 +743,81 @@ opacity: 1;
 }
 
 
+
+
+@media only screen and (max-width: 600px) {
+  .main {
+    margin: 50px 20px 0 23px;
+  }
+
+  #right-p {
+    margin-top: -41px;
+  }
+  #bottom-p {
+  margin-top: -38px;
+  }
+  nav{
+    text-align: center !important;
+  }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+  .main{
+    margin: 23px 20px 0 20px;
+}
+#btn {
+  width: 50%;}
+
+}
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+  .main{
+    margin: 23px 20px 0 20px;
+}
+
+
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  #subbutton{
+    padding: 9px 10px;
+   }
+   
+   .cardDiv{
+    padding: 0% !important;
+    padding-right: 13px !important;
+  }
+  .navcenter{
+  text-align: center !important;
+}
+
+  .navleft {
+    margin-left: 25%;
+}
+  
+   #btn {
+    width: 92%;}
+   #top-p {
+    width: 150px;
+  }
+   
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+  #subbutton{
+    padding: 10px 24px;
+   }
+   .main {
+    margin: 50px 70px 0 70px;
+  }
+
+  .navleft {
+    margin-left: 34%;
+}
+  
+
+  
+}
